<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@layout/fragment_home"
    android:id="@+id/mobile_navigation">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.asclepius.view.fragment.HomeFragment"
        android:label="@string/title_home_bar"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.dicoding.asclepius.view.fragment.HistoryFragment"
        android:label="@string/title_history_bar"
        tools:layout="@layout/fragment_history"/>
    <fragment
        android:id="@+id/navigation_news"
        android:name="com.dicoding.asclepius.view.fragment.NewsFragment"
        android:label="@string/title_news_bar"
        tools:layout="@layout/fragment_news"/>
</navigation>