<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".view.ResultActivity"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/analysis_results"
            style="@style/Theme.Title"
            />
        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/image_target"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_text"
            style="@style/Theme.Description"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:text="@string/close"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/save"
             />

        </LinearLayout>

    </LinearLayout>

</ScrollView>